--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "react-scroll-up": "^1.3.7",
     "react-scroll-up-button": "^1.6.4",
     "redux": "^4.1.2",
-    "sass": "^1.54.5",
+    "sass": "^1.69.5",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
@@ -45,6 +45,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "resolutions": {
+    "react-error-overlay": "6.0.9"
   },
   "eslintConfig": {
     "extends": [
@@ -62,5 +65,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-error-overlay": "^6.0.9"
   }
 }
