--- a/package.json
+++ b/package.json
@@ -15,16 +15,15 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "ajv": "^8.17.1",
     "axios": "^0.26.1",
     "bootstrap": "^5.2.0",
-    "chart.js": "^3.5.1",
     "jquery": "^3.7.1",
     "jspdf": "^2.5.1",
     "konva": "^8.0.4",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
-    "react-chartjs-2": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.4.0",
@@ -34,16 +33,14 @@
     "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
-    "react-scroll": "^1.8.7",
-    "react-scroll-up": "^1.3.7",
-    "react-scroll-up-button": "^1.6.4",
     "redux": "^4.1.2",
     "sass": "^1.69.5",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false NODE_OPTIONS='--max_old_space_size=4096' react-scripts build",
+    "build:netlify": "npm install && GENERATE_SOURCEMAP=false NODE_OPTIONS='--max_old_space_size=4096' react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -70,6 +67,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@craco/craco": "^7.1.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "react-error-overlay": "^6.0.9",
